--- a/ByteCore.Web/Web.config
+++ b/ByteCore.Web/Web.config
@@ -28,7 +28,7 @@
     <customErrors mode="Off" />
   </system.web>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=localhost,1433;Database=ByteCore;User Id=sa;Password=yourStrong(!)Password;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=localhost;Database=ByteCore;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
